# subharmonic_apf

./: CMakeLists.txt  README.md  config.yaml  log.txt  package.xml  para.txt
data/: draw.py  result1 subharmonic, with sampling.xlsx  result1 subharmonic, without sampling.xlsx  result1 traditional, with samping.xlsx  result1 traditional, without sampling.xlsx  result1.xlsx  result2 traditional, with samping.xlsx  result2.xlsx  result3.xlsx
launch/: move.launch
scripts/: Control.py  Lidar.py  a.py  control.py  control_node_1.py  field.py  modify_control.py  plot.py  plot_field.py  plot_gradient.py  testCuda.py
turtlebot/launch/: env1.launch  env2.launch  env3.launch  env4.launch  static_easy.launch  static_hard.launch  static_hard2.launch  static_hard3.launch  static_hard4.launch
turtlebot/world/: static_easy.world  static_hard.world
turtlebot/worlds/: env1.world  env4.world  static_hard2.world  static_hard3.world  static_hard4.world
